port for server within front end has been changed to a different port css fixed modal create title and close button alignment

--- a/src/components/Modal/Modal.css
+++ b/src/components/Modal/Modal.css
@@ -8,7 +8,7 @@
 }
 
 .modalContainer {
-  width: 400px;
+  width: 600px;
   height: auto;
   border-radius: 12px;
   background-color: white;
@@ -25,7 +25,11 @@
 
 .titleCloseBtn {
   display: flex;
-  justify-content: flex-end;
+  justify-content: center;
+}
+
+.modalCreateBtn{
+  align-content: flex-end;
 }
 
 .titleCloseBtn button {
